[project]
name = "dataset-validation"
version = "0.1.0"
description = "Alpaca 数据集格式校验工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dataset-validation = "main:main"
build = "build:build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
